# bhd_vdf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  chiavdf-remove_boost.patch  chiavdf.patch  compile_flags.txt  lgtm.yml
src/: bhd_vdf.cpp  vdf_computer.cpp  vdf_computer.h  vdf_computer_thread.hpp  vdf_msgs.proto  vdf_net.cpp  vdf_net.hpp  vdf_server.cpp  vdf_session.cpp  vdf_session.h  vdf_srv_test.cpp  vdf_test.cpp  vdf_types.h  vdf_utils.cpp  vdf_utils.h
src/chiavdf/: CMakeLists.txt  bqfc.c  bqfc.h  create_discriminant.h  generic.cpp  generic.h  integer.cpp  integer.h  integer_common.cpp  integer_common.h  nucomp.cpp  nucomp.h  parameters.h  primetest.h  proof_common.cpp  proof_common.h  util.cpp  util.h  vdf_new.cpp  vdf_new.h  vdf_original.h  xgcd_partial.c  xgcd_partial.h
src/unix/: asm_compiled.s  avx2_asm_compiled.s  avx512_asm_compiled.s
